@@ -3,6 +3,8 @@
 	* Source/NSDate.m: pass dates over DO bycopy unless explicitly byref.
 	* Source/NSTimeZone.m: pass time zones over DO bycopy unless
 	explicitly byref.
+	Use placeholder class for newly created objects - to improve
+	eficiency of selection of classes in cluster.
 
 2001-01-30  Michael Hanni  <mhanni@sprintmail.com>
 
